--- a/v/vi/vip/viperial.io.html
+++ b/v/vi/vip/viperial.io.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the viperial.io privacy policy that was archived on 2016-08-17.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20160817201301id_/http%3A//www.viperial.io/privacy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the viperial.io privacy policy that was archived on 2017-04-24.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170424223845id_/http%3A//www.viperial3.com/privacy) for the most accurate reproduction.-->
 
 <!DOCTYPE html><html lang="en"><head>
         <meta charset="utf-8">
@@ -7,30 +7,30 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="keywords" content="download, free, mp3s, albums, mixtapes, classics, hiphop, rap, r&amp;b, pop, grime, stream, play, zip, music, tunes, tracks">
         <meta name="description" content="Daily Fresh With The Hottest Submissions">
-        <link rel="canonical" href="http://www.viperial.io/privacy">
+        <link rel="canonical" href="http://www.viperial3.com/privacy">
         <meta property="og:title" content="Viperial - From Fans for Fans">
         <meta property="og:type" content="website">
-        <meta property="og:url" content="http://www.viperial.io/privacy">
-        <meta property="og:image" content="http://www.viperial.io/assets/images/og-image.png">
+        <meta property="og:url" content="http://www.viperial3.com/privacy">
+        <meta property="og:image" content="http://www.viperial3.com/assets/images/og-image.png">
                     <meta property="og:image:width" content="350">
             <meta property="og:image:height" content="350">
-                <link rel="stylesheet" type="text/css" href="http://www.viperial.io/assets/stylesheets/style.css?v=2">
-        <link rel="favicon" type="image/x-icon" src="http://www.viperial.io/favicon.ico">
-                <meta name="google-site-verification" content="XrIB7T9IYq9ukicf-MIkISZ2s8hQtIEec_V-1KJQTQA">
-    </head>
+                <link rel="stylesheet" type="text/css" href="http://www.viperial3.com/assets/stylesheets/style.css?v=2">
+        <link rel="favicon" type="image/x-icon" src="http://www.viperial3.com/favicon.ico">
+                <meta name="google-site-verification" content="WeRAazMwLqWB-R0r4l62CI34CU2zfy9-em1euOgu0dg">
+    <script type="text/javascript" async="" src="//s10.histats.com/js15_as.js"></script><script type="text/javascript" async="" src="//s10.histats.com/js15_as.js"></script></head>
     <body>
         <div class="container">
                         <section class="advertisements-bar clearfix">
                 <div class="advertisement leaderboard">
-                    <iframe src="http://creative.wwwpromoter.com/6666?d=728x90" style="border: none;" scrolling="no" frameborder="0" height="90" width="728"></iframe>
+                    <iframe src="http://creative.wwwpromoter.com/6666?d=728x90" style="border: none;" scrolling="no" width="728" height="90" frameborder="0"></iframe>
                 </div>
                 <div class="advertisement button">
-                    <a href="https://www.facebook.com/viperial2/" target="_blank"><img src="http://www.viperial.io/uploads/ads/5/5_ulkzHAw9Tp.jpg" alt="advertisement"></a>
+                    <a href="https://www.facebook.com/viperial2/" target="_blank"><img src="http://www.viperial3.com/uploads/ads/5/5_ulkzHAw9Tp.jpg" alt="advertisement"></a>
                 </div>
             </section>
                         <header class="main clearfix">
-                <div class="headline"> &gt;&gt; PARTYNEXTDOOR PARTYNEXTDOOR 3 (P3) ALBUM DOWNLOAD. PARTYNEXTDOOR 3 (P3) ZIP DOWNLOAD. RAE SREMMURD SREMMLIFE 2 ALBUM DOWNLOAD. SREMMLIFE 2 ZIP DOWNLOAD.</div>
-                <a href="http://www.viperial.io" id="logo"></a>
+                <div class="headline"> &gt;&gt; KENDRICK LAMAR DAMN DOWNLOAD. DAMN ZIP DOWNLOAD. DAMN KENDRICK LAMAR ALBUM DOWNLOAD. KENDRICK LAMAR DAMN ZIP DOWNLOAD. DAMN FREE DOWNLOAD. DAMN LEAK.</div>
+                <a href="http://www.viperial3.com" id="logo"></a>
                 <div class="mobile-navigation mobile-only-bl">
                     <ul class="mobile-nav">
                         <li class="mobile-actions" data-target="#main-navigation"><button><span class="fa fa-navicon"></span></button></li>
@@ -39,16 +39,16 @@
                 </div>
                 <nav class="main" id="main-navigation">
                     <ul>
-                        <li class=""><a href="http://www.viperial.io" title="Homepage">Home</a></li>
-                        <li class=""><a href="http://www.viperial.io/tracks/browse" title="Browse tracks">Tracks</a></li>
-                        <li class=""><a href="http://www.viperial.io/albums/browse" title="Browse albums">Albums</a></li>
-                        <li class=""><a href="http://www.viperial.io/mixtapes/browse" title="Browse mixtapes">Mixtapes</a></li>
-                        <li class=""><a href="http://www.viperial.io/videos/browse" title="Browse videos">Videos</a></li>
-                        <li class=""><a href="http://www.viperial.io/news/browse" title="Browse news">News</a></li>
-                        <li class=""><a href="http://www.viperial.io/classics/browse" title="Browse classics">Classics</a></li>
+                        <li class=""><a href="http://www.viperial3.com" title="Homepage">Home</a></li>
+                        <li class=""><a href="http://www.viperial3.com/tracks/browse" title="Browse tracks">Tracks</a></li>
+                        <li class=""><a href="http://www.viperial3.com/albums/browse" title="Browse albums">Albums</a></li>
+                        <li class=""><a href="http://www.viperial3.com/mixtapes/browse" title="Browse mixtapes">Mixtapes</a></li>
+                        <li class=""><a href="http://www.viperial3.com/videos/browse" title="Browse videos">Videos</a></li>
+                        <li class=""><a href="http://www.viperial3.com/news/browse" title="Browse news">News</a></li>
+                        <li class=""><a href="http://www.viperial3.com/classics/browse" title="Browse classics">Classics</a></li>
                     </ul>
                 </nav>
-                <form action="http://www.viperial.io/search" method="get" class="search" id="main-search">
+                <form action="http://www.viperial3.com/search" method="get" class="search" id="main-search">
                     <input type="text" name="q" placeholder="">
                     <button type="submit"><span class="fa fa-search"></span></button>
                 </form>
@@ -58,11 +58,11 @@
                 <main>
                     <section class="tabs standalone desktop-only-bl clearfix">
     <ul class="tabs-navigation">
-                <li class=""><a href="http://www.viperial.io/tos">TOS</a></li>
-                <li class=""><a href="http://www.viperial.io/content-removal">Content Removal</a></li>
-                <li class="active"><a href="http://www.viperial.io/privacy">Privacy</a></li>
-                <li class=""><a href="http://www.viperial.io/disclaimer">Disclaimer</a></li>
-                <li class=""><a href="http://www.viperial.io/contact-us">Contact Us</a></li>
+                <li class=""><a href="http://www.viperial3.com/tos">TOS</a></li>
+                <li class=""><a href="http://www.viperial3.com/content-removal">Content Removal</a></li>
+                <li class="active"><a href="http://www.viperial3.com/privacy">Privacy</a></li>
+                <li class=""><a href="http://www.viperial3.com/disclaimer">Disclaimer</a></li>
+                <li class=""><a href="http://www.viperial3.com/contact-us">Contact Us</a></li>
             </ul>
 </section>
 <article class="text-page clearfix">
@@ -106,7 +106,7 @@ the Privacy Policy.</p>
                     <iframe src="http://creative.wwwpromoter.com/6666?d=728x90" style="border: none;" scrolling="no" frameborder="0" height="90" width="728"></iframe>
                 </div>
                 <div class="advertisement button">
-                    <a href="https://www.facebook.com/viperial2/" target="_blank"><img src="http://www.viperial.io/uploads/ads/7/7_5qMIzf83LN.jpg" alt="advertisement"></a>
+                    <a href="https://www.facebook.com/viperial2/" target="_blank"><img src="http://www.viperial3.com/uploads/ads/7/7_5qMIzf83LN.jpg" alt="advertisement"></a>
                 </div>
             </section>
                         <footer class="main clearfix">
@@ -124,26 +124,30 @@ the Privacy Policy.</p>
                     <section class="footer-links">
                         <header>Quick Menu</header>
                         <ul class="footer-nav">
-                                                        <li><a href="http://www.viperial.io/tos">TOS</a></li>
-                                                        <li><a href="http://www.viperial.io/content-removal">Content Removal</a></li>
-                                                        <li><a href="http://www.viperial.io/privacy">Privacy</a></li>
-                                                        <li><a href="http://www.viperial.io/disclaimer">Disclaimer</a></li>
-                                                        <li><a href="http://www.viperial.io/contact-us">Contact Us</a></li>
+                                                        <li><a href="http://www.viperial3.com/tos">TOS</a></li>
+                                                        <li><a href="http://www.viperial3.com/content-removal">Content Removal</a></li>
+                                                        <li><a href="http://www.viperial3.com/privacy">Privacy</a></li>
+                                                        <li><a href="http://www.viperial3.com/disclaimer">Disclaimer</a></li>
+                                                        <li><a href="http://www.viperial3.com/contact-us">Contact Us</a></li>
                                                     </ul>
                     </section>
                     <section class="footer-links">
                         <header>Afiliates</header>
                         <ul class="footer-nav">
-                                                        <li><a href="http://www.audiocastle.cc/" target="_blank">AudioCastle</a></li>
+                                                        <li><a href="http://www.audiocastle2.org/" target="_blank">AudioCastle</a></li>
                                                         <li><a href="http://www.lilwaynehq.com/" target="_blank">LilWayneHQ</a></li>
-                                                        <li><a href="http://www.hiphopengine.com/" target="_blank">HipHopEngine</a></li>
-                                                        <li><a href="http://www.albumforest.com/" target="_blank">AlbumForest</a></li>
+                                                        <li><a href="http://www.hiphopengine.co/" target="_blank">HipHopEngine</a></li>
+                                                        <li><a href="http://www.streamalbums.com/" target="_blank">StreamAlbums</a></li>
+                                                        <li><a href="http://www.hiphophive.com/" target="_blank">HipHopHive</a></li>
+                                                        <li><a href="http://www.vibecaptain.com/" target="_blank">VibeCaptain</a></li>
+                                                        <li><a href="http://spankradio.cz/" target="_blank">Spank Radio</a></li>
+                                                        <li><a href="http://telecharger-mp3.co/" target="_blank">Telecharger Mp3</a></li>
+                                                        <li><a href="http://4sixty.com/" target="_blank">4SIXTY</a></li>
                                                     </ul>
                     </section>
                     <section class="footer-links">
                         <header>Partners</header>
                         <ul class="footer-nav">
-                                                        <li><a href="http://www.monstermixtapes.net/" target="_blank">MonsterMixtapes</a></li>
                                                     </ul>
                     </section>
                     <section class="footer-links desktop-only-bl">
@@ -156,9 +160,9 @@ the Privacy Policy.</p>
             </footer>
             <section class="copyrights">2016 Viperial, All Rights Reserved</section>
         </div>
-        <script type="text/javascript" src="http://www.viperial.io/assets/javascripts/jquery.min.js"></script>
-        <script type="text/javascript" src="http://www.viperial.io/assets/javascripts/audioplayer.js"></script>
-        <script type="text/javascript" src="http://www.viperial.io/assets/javascripts/main.js"></script>
+        <script type="text/javascript" src="http://www.viperial3.com/assets/javascripts/jquery.min.js"></script>
+        <script type="text/javascript" src="http://www.viperial3.com/assets/javascripts/audioplayer.js"></script>
+        <script type="text/javascript" src="http://www.viperial3.com/assets/javascripts/main.js"></script>
                 <script type="text/javascript" src="https://static.addtoany.com/menu/page.js" async=""></script>
 
         <script data-cfasync="false" type="text/javascript" src="//go.pub2srv.com/apu.php?zoneid=467467"></script> 
@@ -169,14 +173,29 @@ var infolinks_wsid = 35;
 </script>
 <script type="text/javascript" src="//resources.infolinks.com/js/infolinks_main.js"></script>
 
-                    <script type="text/javascript">document.write(unescape("%3Cscript src=%27http://s10.histats.com/js15.js%27 type=%27text/javascript%27%3E%3C/script%3E"));</script><script src="http://s10.histats.com/js15.js" type="text/javascript"></script>
-<a href="http://www.histats.com" target="_blank" title="counter"><script type="text/javascript">
-try {Histats.start(1,2858820,4,0,0,0,"");
-Histats.track_hits();} catch(err){};
-</script></a>
-<noscript><a href="http://www.histats.com" target="_blank"><img src="http://sstatic1.histats.com/0.gif?2858820&101" alt="counter" border="0"></a></noscript>
+                    <script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,2858820,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?2858820&101" alt="free webpage hit counter" border="0"></a></noscript>
 
-<script data-cfasync="false" type="text/javascript" src="//friesmeasureretain.info/REOMOeyJyb3V0ZSI6ICJnZXRfanMiLCAic3RpZCI6ICIxMDUzIiwgImQiOiAiZnJpZXNtZWFzdXJlcmV0YWluLmluZm8ifQ==bDlm4"></script>
+   <!-- Histats.com  START  (aync)-->
+<script type="text/javascript">var _Hasync= _Hasync|| [];
+_Hasync.push(['Histats.start', '1,3792937,4,0,0,0,00010000']);
+_Hasync.push(['Histats.fasi', '1']);
+_Hasync.push(['Histats.track_hits', '']);
+(function() {
+var hs = document.createElement('script'); hs.type = 'text/javascript'; hs.async = true;
+hs.src = ('//s10.histats.com/js15_as.js');
+(document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(hs);
+})();</script>
+<noscript><a href="/" target="_blank"><img  src="//sstatic1.histats.com/0.gif?3792937&101" alt="free tracker" border="0"></a></noscript>
+<!-- Histats.com  END  -->
             
 
 </body></html>
