--- a/i/it/itw/itwire.com.html
+++ b/i/it/itw/itwire.com.html
@@ -1,14 +1,14 @@
-<!--The following is the downloaded HTML source of the itwire.com privacy policy that was archived on 2016-11-30.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20161130172941id_/http%3A//www.itwire.com/privacy-policy) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the itwire.com privacy policy that was archived on 2017-04-26.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20170426025653id_/http%3A//www.itwire.com/privacy-policy) for the most accurate reproduction.-->
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd"><html prefix="og: http://ogp.me/ns#" xmlns="http://www.w3.org/1999/xhtml" xml:lang="en-gb" lang="en-gb"><head>
-		<base href="http://www.itwire.com/privacy-policy">
+		<base href="http://itwire.com/privacy-policy">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="keywords" content="custom keys for seo">
 	<meta name="rights" content="custom rights for seo">
 	<meta name="title" content="Privacy Policy">
 	<meta name="author" content="Paul Hosking">
-	<meta property="og:url" content="http://www.itwire.com/privacy-policy">
+	<meta property="og:url" content="http://itwire.com/privacy-policy">
 	<meta property="og:title" content="iTWire - Privacy Policy">
 	<meta property="og:type" content="article">
 	<meta property="og:description" content="Privacy Policy iTWire PTY LTD is committed to preserving your privacy and fully recognises the need for appropriate protection and management of any p...">
@@ -50,7 +50,7 @@
 	<script src="/plugins/system/jat3/jat3/base-themes/default/js/core.js" type="text/javascript"></script>
 	<script src="/plugins/system/jat3/jat3/base-themes/default/js/menu/mega.js" type="text/javascript"></script>
 	<script src="/modules/mod_nova/js/swfobject.js" type="text/javascript"></script>
-	<script src="http://www.itwire.com/modules/mod_tabs_gk5/scripts/engine.mootools.js" type="text/javascript"></script>
+	<script src="http://itwire.com/modules/mod_tabs_gk5/scripts/engine.mootools.js" type="text/javascript"></script>
 	<script type="text/javascript">
 window.setInterval(function(){var r;try{r=window.XMLHttpRequest?new XMLHttpRequest():new ActiveXObject("Microsoft.XMLHTTP")}catch(e){}if(r){r.open("GET","/index.php?option=com_ajax&format=json",true);r.send(null)}},300000);
 	</script>
@@ -103,7 +103,7 @@ window.setInterval(function(){var r;try{r=window.XMLHttpRequest?new XMLHttpReque
 	<link href="http://feeds.feedburner.com/" rel="alternate" type="application/rss+xml" title="test">
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="Privacy Policy">
-	<meta property="og:url" content="http://www.itwire.com/privacy-policy.html">
+	<meta property="og:url" content="http://itwire.com/privacy-policy.html">
 	<meta property="og:description" content="Privacy Policy
 iTWire PTY LTD is committed to preserving your privacy and fully recognises the need for appropriate protection and management of any personally identifiable information you share with us (any information by which you can be identified, such as name, address, e-mail address or teleph">
 
@@ -173,7 +173,7 @@ var isRTL = false;
                 <div id="ja-topmenu" class="wrap ">
                    <div class="main clearfix">
            <p class="ja-day" style="display:none;">
-	  <span class="date">01</span><span class="month">December</span><span class="year">2016</span>	</p>
+	  <span class="date">26</span><span class="month">April</span><span class="year">2017</span>	</p>
 	
 	<h1 class="logo">
 	    <a href="/" title="iTWire"><span>iTWire</span></a>
@@ -212,7 +212,7 @@ var isRTL = false;
                         <div id="ja-mainnav" class="wrap ">
                    <div class="main clearfix">
            <div class="ja-megamenu clearfix" id="ja-megamenu">
-<ul class="megamenu level0"><li class="mega first haschild"><a href="http://www.itwire.com/" class="mega first haschild" id="menu435" title="Home"><span class="menu-title">Home</span></a><div class="childcontent cols1 ">
+<ul class="megamenu level0"><li class="mega first haschild"><a href="http://itwire.com/" class="mega first haschild" id="menu435" title="Home"><span class="menu-title">Home</span></a><div class="childcontent cols1 ">
 <div class="childcontent-inner-wrap">
 <div class="childcontent-inner clearfix" style="width: 200px;"><div class="megacol column1 first" style="width: 200px;"><ul class="megamenu level1"><li class="mega first"><a href="/sponsored-announcements.html" class="mega first" id="menu1456" title="Sponsored Announcements"><span class="menu-title">Sponsored Announcements</span></a></li></ul></div></div>
 </div></div></li><li class="mega haschild"><a href="/your-it-news.html" class="mega haschild" id="menu294" title="Your Tech"><span class="menu-title">Your Tech</span></a><div class="childcontent cols1 ">
@@ -443,7 +443,7 @@ var isRTL = false;
   </div>
 
   <!-- Plugins: AfterDisplayTitle -->
-  <div class="bt-social-share bt-social-share-after-title"><div class="bt-social-share-button bt-facebook-share-button"><img class="fb-share" src="http://www.itwire.com//plugins/content/bt_socialshare/assets/share.png" onclick="window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent('http://www.itwire.com/privacy-policy.html')+'&amp;t='+encodeURIComponent('Privacy Policy'),'sharer','toolbar=0,status=0,left='+((screen.width/2)-300)+',top='+((screen.height/2)-200)+',width=600,height=360');" href="javascript: void(0)"></div><div class="bt-social-share-button bt-facebook-like-button"><fb:like send="false" colorscheme="light" font="arial" href="http://www.itwire.com/privacy-policy.html" layout="button_count" width="70" show_faces="true" action="like"></fb:like></div><div class="bt-social-share-button bt-twitter-button" style="width:80px"><a href="http://twitter.com/share" class="twitter-share-button" data-via="BowThemes" data-url="http://www.itwire.com/privacy-policy.html" data-size="medium" data-lang="en" data-count="horizontal">Twitter</a></div><div class="bt-social-share-button bt-linkedin-button"><script type="IN/share" data-url="http://www.itwire.com/privacy-policy.html" data-showzero="false" data-counter="right"></script></div><div class="bt-social-share-button bt-googleplus-button"><g:plus action="share" href="http://www.itwire.com/privacy-policy.html" annotation="bubble" height="20"></g:plus></div><div class="bt-social-share-button bt-reddit-button"><a href="//www.reddit.com/submit" onclick="window.open('http://www.reddit.com/submit?url=' + encodeURIComponent('http://www.itwire.com/privacy-policy.html') + '&amp;title=' + encodeURIComponent('Privacy Policy') , '', 'width=900, height=500, scrollbars=yes'); return false"> <img src="//www.redditstatic.com/spreddit1.gif" alt="submit to reddit" border="0"> </a></div></div>
+  <div class="bt-social-share bt-social-share-after-title"><div class="bt-social-share-button bt-facebook-share-button"><img class="fb-share" src="http://itwire.com//plugins/content/bt_socialshare/assets/share.png" onclick="window.open('http://www.facebook.com/sharer.php?u='+encodeURIComponent('http://itwire.com/privacy-policy.html')+'&amp;t='+encodeURIComponent('Privacy Policy'),'sharer','toolbar=0,status=0,left='+((screen.width/2)-300)+',top='+((screen.height/2)-200)+',width=600,height=360');" href="javascript: void(0)"></div><div class="bt-social-share-button bt-facebook-like-button"><fb:like send="false" colorscheme="light" font="arial" href="http://itwire.com/privacy-policy.html" layout="button_count" width="70" show_faces="true" action="like"></fb:like></div><div class="bt-social-share-button bt-twitter-button" style="width:80px"><a href="http://twitter.com/share" class="twitter-share-button" data-via="BowThemes" data-url="http://itwire.com/privacy-policy.html" data-size="medium" data-lang="en" data-count="horizontal">Twitter</a></div><div class="bt-social-share-button bt-linkedin-button"><script type="IN/share" data-url="http://itwire.com/privacy-policy.html" data-showzero="false" data-counter="right"></script></div><div class="bt-social-share-button bt-googleplus-button"><g:plus action="share" href="http://itwire.com/privacy-policy.html" annotation="bubble" height="20"></g:plus></div><div class="bt-social-share-button bt-reddit-button"><a href="//www.reddit.com/submit" onclick="window.open('http://www.reddit.com/submit?url=' + encodeURIComponent('http://itwire.com/privacy-policy.html') + '&amp;title=' + encodeURIComponent('Privacy Policy') , '', 'width=900, height=500, scrollbars=yes'); return false"> <img src="//www.redditstatic.com/spreddit1.gif" alt="submit to reddit" border="0"> </a></div></div>
   <!-- K2 Plugins: K2AfterDisplayTitle -->
   
   <div class="itemBody">
@@ -468,7 +468,7 @@ var isRTL = false;
 <p>We will only record your e-mail address if you send us a message. Your e-mail address will only be used for the purpose for which you have provided it and it will not be added to a mailing list or used for any other purpose without your consent.</p>	  </div>
 	  	  	  <!-- Item fulltext -->
 	  <div class="itemFullText">
-	  	<div class="fb-recommendations-bar" data-href="http://www.itwire.com/privacy-policy.html" data-read-time="30" data-action="like" data-trigger="onvisible" data-side="right" data-num_recommendations="2"></div><div id="fb-root"></div>
+	  	<div class="fb-recommendations-bar" data-href="http://itwire.com/privacy-policy.html" data-read-time="30" data-action="like" data-trigger="onvisible" data-side="right" data-num_recommendations="2"></div><div id="fb-root"></div>
 				<script>(function(d, s, id) {
 				  var js, fjs = d.getElementsByTagName(s)[0];
 				  if (d.getElementById(id)) {return;}
@@ -607,7 +607,7 @@ googletag.cmd.push(function() { googletag.display('div-gpt-ad-1340601751725-3');
 		<input type="hidden" name="task" value="user.login">
 		<input type="hidden" name="return" value="aW5kZXgucGhwP0l0ZW1pZD0xNDQz">
 		
-		<input type="hidden" name="a8ba1902b020bca6d67a6193e85c24d3" value="1">	</fieldset>
+		<input type="hidden" name="a410f413cb59100f39d8199f8551431e" value="1">	</fieldset>
 	
 	<ul>
 		<li>
